# maslowcnc

./: .gitmodules  CMakeLists.txt  machine.h  sdkconfig  sdkconfig.old
components/testcase/: CMakeLists.txt  adc.c  brushedmotor.c  i2c_beltsensor.c  machine.c  main.c  networking.c  peripherals_i2c.c
components/testcase/include/: adc.h  brushedmotor.h  i2c_beltsensor.h  machine.h  networking.h  peripherals_i2c.h
